testsuite/tests/typecheck/should_fail/T16074.stderr

T16074.hs:10:7: error:
    • Couldn't match type ‘a’ with ‘b’
      Expected: TYPE a :~: TYPE b
        Actual: TYPE a :~: TYPE a
      ‘a’ is a rigid type variable bound by
        the type signature for:
          foo :: * :~: *
        at T16074.hs:9:1-24
      ‘b’ is a rigid type variable bound by
        the type signature for:
          foo :: * :~: *
        at T16074.hs:9:1-24
    • In the expression: Refl
      In an equation for ‘foo’: foo = Refl
    • Relevant bindings include
        foo :: TYPE a :~: TYPE b (bound at T16074.hs:10:1)
